<resources>
    <string name="app_name">Project</string>
    <string name="action_internal_web">Om oss</string>

    <string name="id_action">ID</string>
    <string name="name_action">NAME</string>
    <string name="company_action">COMPANY</string>
    <string name="location_action">LOCATION</string>
    <string name="size_action">SIZE</string>

    <string name="about_action">Om oss</string>
    <string name="text_action">Denna sida är riktad till de peroner som är intresserade av fotboll generellt men speciellt för Sveriges inhemska liga Allsvenskan. Det som går att hitta på sidan är information om allsvenska arenor. Vilka lag som spelar på arenan, var den är placerad samt vilken kapacitet som arenan har. </string>
    <string name="button_action">Tillbaka till startsida</string>
</resources>
